--- a/Views/Home/Components/Edit/Default.cshtml
+++ b/Views/Home/Components/Edit/Default.cshtml
@@ -1,6 +1,8 @@
-﻿@model ViewComponentEmployee.Models.Employee
+﻿@*@model IEnumerable<Employee>*@
 
 
+
+@model ViewComponentEmployee.Models.Employee
 
 @{
     ViewData["Title"] = "EditForm";
@@ -13,12 +15,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditForm">
+        <form asp-action="EditForm" asp-controller="Employee" autocomplete="off">
+            @*<form asp-action="EditForm">*@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="empid" class="control-label"></label>
-                <input asp-for="empid" class="form-control" />
-                <span asp-validation-for="empid" class="text-danger"></span>
+                <label asp-for="id" class="control-label"></label>
+                <input asp-for="id" class="form-control" />
+                <span asp-validation-for="id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="empname" class="control-label"></label>
