--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -4,7 +4,7 @@
 @model ViewComponentEmployee.Models.Employee
 
 @{
-    ViewData["Title"] = "CreateEdit";
+    ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,21 +13,25 @@
 
 <div class="row">
     <div class="col-md-4">
+
         <form asp-action="Create" asp-controller="Employee" autocomplete="off">
-            @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="id" />
             <div class="form-group">
                 <label class="control-label">Name</label>
                 <input type="text" asp-for="empname" class="form-control" />
+                <span asp-validation-for="empname" class="text-danger"></span>
 
             </div>
             <div class="form-group">
                 <label class="control-label">Department</label>
                 <input type="text" asp-for="Department" class="form-control" />
+                <span asp-validation-for="Department" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label class="control-label">Email</label>
                 <input type="text" asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Submit" class="btn btn-primary" />
@@ -39,8 +43,6 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
-
 
 
 
