--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@model ViewComponentEmployee.Models.Employee
+﻿@model ViewComponentEmployee.Models.Employee
 
 @{
     ViewData["Title"] = "Edit";
@@ -18,8 +16,8 @@
             <div class="form-group">
                 <input type="hidden" asp-for="id" />
                 @*<label asp-for="id" class="control-label"></label>
-                    <input asp-for="id" class="form-control" />
-                    <span asp-validation-for="id" class="text-danger"></span>*@
+        <input asp-for="id" class="form-control" />
+        <span asp-validation-for="id" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="empname" class="control-label"></label>
