--- a/Views/Home/Components/Edit/Default.cshtml
+++ b/Views/Home/Components/Edit/Default.cshtml
@@ -2,6 +2,8 @@
 
 @model ViewComponentEmployee.Models.Employee
 
+
+@*@model IEnumerable<ViewComponentEmployee.Models.Employee>*@
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
