--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -19,8 +19,8 @@
             <input type="hidden" asp-for="id" />
             <div class="form-group">
                 <label class="control-label">Name</label>
-                <input type="text" asp-for="empname" class="form-control" />
-                <span asp-validation-for="empname" class="text-danger"></span>
+                <input type="text" asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
 
             </div>
             <div class="form-group">
