--- a/Views/Home/Components/Edit/Default.cshtml
+++ b/Views/Home/Components/Edit/Default.cshtml
@@ -24,9 +24,9 @@
                     <span asp-validation-for="id" class="text-danger"></span>*@
             </div>
             <div class="form-group">
-                <label asp-for="empname" class="control-label"></label>
-                <input asp-for="empname" class="form-control" />
-                <span asp-validation-for="empname" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Department" class="control-label"></label>
