--- a/Views/Home/Components/EmployeeDetails/Default.cshtml
+++ b/Views/Home/Components/EmployeeDetails/Default.cshtml
@@ -31,7 +31,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.empname)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Department)
