--- a/Views/Home/Components/EmployeeDetails/Default.cshtml
+++ b/Views/Home/Components/EmployeeDetails/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ViewComponentEmployee.Models.Employee>
 
 @{
-    ViewData["Title"] = "Employee Details";
+    ViewData["Title"] = "Employee Details123";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
