--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -42,9 +42,9 @@
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
-                        <a asp-action="Edit"  asp-route-id="@item.id">Edit</a> 
-                        @*|*@
-                        @*<a asp-action="Delete"  asp-route-id="@item.id">Delete</a>*@
+                        <a asp-action="Edit" asp-route-id="@item.id">Edit</a>
+                        |
+                        <a asp-action="Delete" asp-controller="Employee" asp-route-id="@item.id">Delete </a>
                     </td>
                 </tr>
             }
